fix(updated-social-links): removed twitter added IG

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
             </a>
             </li>
             <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white" href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener">
-              <i class="icon-social-github"></i>
+                <a class="social-link rounded-circle text-white" href="https://instagram.com/{{ site.instagram_username }}" target="_blank" rel="noopener">
+              <i class="icon-social-instagram"></i>
             </a>
             </li>
         </ul>
