feat(new-notes): added new descriptions, footer, and more

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,9 @@
             </a>
             </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website {{ 'now' | date: "%Y" }}</p>
+        <p class="text-muted small mb-0">Copyright &copy; Ielectro Fix Solutions {{ 'now' | date: "%Y" }}</p>
+        <p class="text-muted small mb-0">Designed by 1019 Studios LLC <a class="social-link rounded-circle text-white" href="https://1019studios.org" target="_blank" rel="noopener">
+        </p>
+
     </div>
 </footer>
