--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
 <header class="masthead d-flex">
     <div class="container text-center my-auto">
-        <h1 class="mb-1">Stylish Portfolio</h1>
+        <h1 class="mb-1">Ielectro Fix Solutions</h1>
         <h3 class="mb-5">
-          <em>A Free Bootstrap Theme by Start Bootstrap</em>
+          <em>Cell Phone Sale and Repair, IT Consulting, Web and Event Hosting</em>
         </h3>
+        <!--
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        -->
     </div>
     <div class="overlay"></div>
 </header>
