fix(updated-text): fixed typos and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
             </li>
         </ul>
         <p class="text-muted small mb-0">Copyright &copy; Ielectro Fix Solutions {{ 'now' | date: "%Y" }}</p>
-        <p class="text-muted small mb-0">Designed by 1019 Studios LLC <a class="social-link rounded-circle text-white" href="https://1019studios.org" target="_blank" rel="noopener">
+        <p class="text-muted small mb-0">Designed by <a href="https://1019studios.org">1019 Studios LLC</a>
         </p>
 
     </div>
