--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="masthead d-flex">
     <div class="container text-center my-auto">
-        <h1 class="mb-1">Ielectro Fix Solutions</h1>
+        <h1 class="mb-1">IElectro Fix Solutions</h1>
         <h3 class="mb-5">
           <em>Cell Phone Sale and Repair, IT Consulting, Web and Event Hosting</em>
         </h3>
