feat(added-banner-photo): added image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="masthead d-flex">
+<header class="engineer-banner d-flex">
     <div class="container text-center my-auto">
         <h1 class="mb-1">IElectro Fix Solutions</h1>
         <h3 class="mb-5">
