--- a/assets/css/stylish-portfolio.css
+++ b/assets/css/stylish-portfolio.css
@@ -100,6 +100,21 @@ h6 {
   background-size: cover;
 }
 
+.engineer-banner {
+  min-height: 30rem;
+  position: relative;
+  display: table;
+  width: 100%;
+  height: auto;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../img/banner-field-engineer-442154.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/banner-field-engineer-442154.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .masthead h1 {
   font-size: 4rem;
   margin: 0;
