--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
 <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
-            <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+            <a class="js-scroll-trigger" href="#page-top">IElectro</a>
         </li>
         <li class="sidebar-nav-item">
             <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -15,9 +15,11 @@
         <li class="sidebar-nav-item">
             <a class="js-scroll-trigger" href="#services">Services</a>
         </li>
+        <!-- 
         <li class="sidebar-nav-item">
             <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
+        -->
         <li class="sidebar-nav-item">
             <a class="js-scroll-trigger" href="#contact">Contact</a>
         </li>
