testing div fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
               <i class="icon-social-facebook"></i>
             </a>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
                 <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/{{ site.twitter_username }}" target="_blank" rel="noopener">
               <i class="icon-social-twitter"></i>
             </a>
-            </li>
+            </li> -->
             <li class="list-inline-item">
                 <a class="social-link rounded-circle text-white" href="https://instagram.com/{{ site.instagram_username }}" target="_blank" rel="noopener">
               <i class="icon-social-instagram"></i>
