--- a/assets/css/stylish-portfolio.css
+++ b/assets/css/stylish-portfolio.css
@@ -232,9 +232,13 @@ h6 {
   max-width: 30rem;
 }
 
+
 .callout table {
   margin-left:auto; 
   margin-right:auto;
+  border-width:0px;
+  border:none;
+  outline:none;
 }
 
 .portfolio-item {
