fix(faded-bg-images): added lower hue and saturation to bg images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="masthead d-flex">
     <div class="container text-center my-auto">
-        <h1 class="mb-1">IElectro Fix Solutions</h1>
-        <h3 class="mb-5">
+        <h1 class="mb-1" color="text-white">IElectro Fix Solutions</h1>
+        <h3 class="mb-5" color="text-white">
           <em>Cell Phone Sale and Repair, IT Consulting, Web and Event Hosting</em>
         </h3>
         <!--
