added new bg images, change header font color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="masthead d-flex">
     <div class="container text-center my-auto">
-        <h1 class="mb-1" style="color:white;">IElectro Fix Solutions</h1>
-        <h3 class="mb-5" style="color:white;">
+        <h1 class="mb-1" style="color: #1D809F;">IElectro Fix Solutions</h1>
+        <h3 class="mb-5" style="color: #1D809F;">
           <em>Cell Phone Sale and Repair, IT Consulting, Web and Event Hosting</em>
         </h3>
         <!--
